# thrust_balance

./: README.md  thrust balance report.docx
tb_AI/: CMakeLists.txt  package.xml
tb_AI/src/: data.py
tb_control/: CMakeLists.txt  package.xml
tb_control/config/: tb_joint_state_controller.yaml
tb_control/msg/: tb_control_signal.msg
tb_control/src/: tb_controller.py  tb_input_allocation.py
tb_description/: CMakeLists.txt  package.xml
tb_description/launch/: tb_display.launch  tb_gazebo.launch  tb_rviz.launch
tb_description/rviz/: tb_display_rviz.rviz
tb_description/urdf/: tb_description.urdf  thrustbalance.gv
tb_framework/: CMakeLists.txt  package.xml
tb_framework/arduino/: arduino_pc_thrust_balance_v2.ino.ino
tb_framework/arduino/arduino_pc_thrust_balance_v2/: arduino_pc_thrust_balance_v2.ino
tb_framework/msg/: tb_feedback.msg  tb_pwm.msg
tb_framework/src/: tb_pwm.py  tb_teleop.py  tbpwm.py  thrust_balance_framework.cpp  thrust_balance_framework.cpp.autosave  thrustbalance_framework.py
